# namake-trader

./: .gitignore  LICENSE  README.md
api_msgs/: CMakeLists.txt  package.xml
api_msgs/msg/: Candle.msg  FailReasonCode.msg  Granularity.msg  Instrument.msg  OrderState.msg  OrderType.msg  PriceBucket.msg  Pricing.msg  ProfitLossOrder.msg  ProfitLossOrderTransaction.msg  TradeState.msg
api_msgs/srv/: AccountQuerySrv.srv  CandlesSrv.srv  OrderCancelSrv.srv  OrderCreate.srv  OrderCreateSrv.srv  OrderDetailsSrv.srv  PricingQuerySrv.srv  TradeCRCDOSrv.srv  TradeCloseSrv.srv  TradeDetailsSrv.srv
api_server_msgs/: CMakeLists.txt  package.xml
api_server_msgs/msg/: Candle.msg  Granularity.msg  OrderState.msg  OrderType.msg  ProfitLossOrder.msg
api_server_msgs/srv/: AccountQuerySrv.srv  CandlesQuerySrv.srv  OrderCancelSrv.srv  OrderCreateSrv.srv  OrderDetailsSrv.srv  PricingQuerySrv.srv  TradeCRCDOSrv.srv  TradeCloseSrv.srv  TradeDetailsSrv.srv
api_server_oanda/: .mypy.ini  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
api_server_oanda/api_server_oanda/: api_server.py  constant.py  parameter.py  pricing_publisher.py  ros_utils.py  utils.py
oanda_api/: .flake8  .mypy.ini  package.xml  setup.cfg  setup.py
oanda_api/oanda_api/: api_service.py  candlestick_service.py  constant.py  dataclass.py  fetcher.py  order_requester.py  order_server.py  order_service.py  parameter.py  pricing.py  pricing_stream.py  pricing_streamer.py  ros_utils.py  service_common.py  stream_api.py  utility.py  utils.py
oanda_api_msgs/: CMakeLists.txt  package.xml
oanda_api_msgs/msg/: Pricing.msg  PricingStream.msg
trade_app/: .mypy.ini  package.xml  pyproject.toml  setup.cfg  setup.py
trade_app/test/: test_copyright.py  test_flake8.py  test_pep257.py
trade_app/trade_app/: app_bb.py  app_sma.py  constant.py  dataclass.py  exception.py  parameter.py  ros_utils.py  store.py  utils.py  wrapper.py
trade_bringup/: .mypy.ini  package.xml  pyproject.toml  setup.cfg  setup.py
trade_bringup/launch/: api_server_oanda_launch.py  bringup_launch.py  system_trade_launch.py
trade_bringup/params/: api_server_oanda.yaml  trade_app_bb.yaml  trade_manager.yaml
trade_manager/: .flake8  .mypy.ini  .pylintrc  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
trade_manager/test/: test_copyright.py  test_flake8.py
trade_manager/trade_manager/: backup.py  candles_store.py  candlestick_manager.py  constant.py  data.py  exception.py  historical_candles.py  order_manager.py  order_scheduler.py  parameter.py  ros_utils.py  trigger.py  utility.py  utils.py  wrapper.py
trade_manager_msgs/: CMakeLists.txt  package.xml
trade_manager_msgs/msg/: Candle.msg  CandleMnt.msg  Granularity.msg  HistoricalCandles.msg  Instrument.msg  LatestCandle.msg  LatestData.msg  LimitOrderRequest.msg  LimitStopOrderRequest.msg  MarketOrderRequest.msg  OrderDir.msg  OrderRequest.msg  OrderType.msg  StopOrderRequest.msg
trade_manager_msgs/srv/: CandlesByDatetimeSrv.srv  CandlesByLengthSrv.srv  CandlesDataSrv.srv  CandlesMntSrv.srv  OrderRegisterSrv.srv  OrderRequestSrv.srv  TradeCloseRequestSrv.srv
trade_monitor/: package.xml  setup.cfg  setup.py
trade_monitor/trade_monitor/: abstract.py  base.py  candlestick_chart.py  constant.py  gap_fill.py  gap_fill_ui.py  gapfill_heatmap.py  gapfill_heatmap.ui  gui_monitor.py  gui_monitor.ui  main_ui.py  parameter.py  ros_common.py  util.py  utilities.py  utility.py  widget_base.py
trade_monitor/trade_monitor/gapfill/: candlestick_chart.py  constant.py  gap_fill_ui.py  gapfill_heatmap.py  gapfill_heatmap.ui  gapfill_ui.py  heatmap.py  heatmap.ui  heatmap_manager.py  heatmap_ui.py  widget.py
trade_monitor/trade_monitor/tech/: bb_ui.py  constant.py  sma01_ui.py  sma_mth01.ui  sma_mth01_ui.py  tech_ui.py  widget.py
trade_monitor/trade_monitor/tech/bb/: bb_ui.py  constant.py  widget.py
trade_monitor/trade_monitor/tech/macd/: constant.py  macd_ui.py  widget.py
trade_monitor/trade_monitor/tech/parabolic/: constant.py  parabolic_ui.py  widget.py
trade_monitor/trade_monitor/tech/sma/: constant.py  sma01_ui.py  sma_ui.py  widget.py
trade_monitor/trade_monitor/ttm/: base.py  candlestick_chart.py  chart.py  common.py  constant.py  gotoday_ui.py  histogram.ui  histogram_ui.py  ttm_common.py  ttm_details.py  ttm_details.ui  ttm_gotoday.py  ttm_gotoday.ui  ttm_ui.py  ttm_weekday.py  weekday.ui  weekday_ui.py  widget.py
